# pam-particle-firmware

./: .gitignore  3b0024000b47373336373936_ec_new.der  3b0024000b47373336373936_ec_new.pem  3b0024000b47373336373936_ec_new.pub.pem  README.md  backup_ec_3b0024000b47373336373936_ec_new.der  backup_ec_3b0024000b47373336373936_ec_new.pub.pem  project.properties  sensibleIOT_integration.txt
lib/Adafruit_ADS1X15/src/: Adafruit_ADS1X15.h
lib/Adafruit_BME680/examples/usage/: bme680_example.ino
lib/Adafruit_BME680/src/: Adafruit_BME680.cpp
lib/BuildProto/src/: buildProto.cpp  buildProto.h
lib/GPS/src/: GPS.cpp  gps.h
lib/HIH61XX/: library.properties
lib/HIH61XX/examples/basic-data-output/: basic-data-output.cpp
lib/HIH61XX/src/: HIH61XX.cpp  HIH61XX.h
lib/HIH61XX/src/HIH61XX/: HIH61XX.h
lib/LMP91000/src/: LMP91000.cpp  LMP91000.h
lib/PowerCheck/src/: PowerCheck.cpp  PowerCheck.h
lib/SdFat/src/: SdSpi.h
lib/SparkFunMicroOLED/: library.properties
lib/SparkFunMicroOLED/examples/Micro-OLED-Shield-Example/: Micro-OLED-Shield-Example.cpp
lib/SparkFunMicroOLED/examples/OLED-Cube/: OLED-Cube.cpp
lib/SparkFunMicroOLED/src/: SparkFunMicroOLED.cpp
lib/SparkFunMicroOLED/src/SparkFunMicroOLED/: SparkFunMicroOLED.h  SparkFunMicroOLEDFonts.h
lib/Telaire_6713/: library.properties  telaire_T6713.cpp  telaire_T6713.h
lib/Telaire_6713/src/: Telaire_T6713.cpp  Telaire_T6713.h
lib/buildProto/: buildProto.cpp  buildProto.h
lib/nanopb/: CMakeLists.txt  README.md  WORKSPACE
lib/nanopb/generator/: nanopb_generator.py  nanopb_generator.py2  platformio_generator.py  protoc  protoc-gen-nanopb  protoc-gen-nanopb-py2  protoc-gen-nanopb.bat
lib/nanopb/generator/proto/: Makefile  __init__.py  _utils.py  nanopb.proto  nanopb_pb2.py
lib/nanopb/src/: MY_pb.h  MY_pb_common.c  MY_pb_common.h  MY_pb_decode.c  MY_pb_decode.h  MY_pb_encode.c  MY_pb_encode.h
lib/nanopb2/src/: PI_PB_encode.cpp  PI_PB_encode.h
lib/sps30/src/: sps30.cpp  sps30.h
src/: CloudHandler.cpp  CloudHandler.h  Constants.h  FinalCloudHandler.cpp  FinalCloudHandler.h  Global.cpp  Wiring.h  final_pam_upload.pb.c  final_pam_upload.pb.h  global.cpp  global.h  manifest.h  pam-oneB.cpp  pam-oneB.ino  pam.pb.c  pam.pb.h  pam_upload.pb.c  pam_upload.pb.h
src/MeasurementHandler/: MeasurementHandler.cpp  MeasurementHandler.h
src/MenuFunctions/: ABCLogic.h  BuildVersion.h  CalibrateCO2.h  CellularInfo.h  ContinuousGPS.h  EspReset.h  PrintHeader.h  ResetEEPROM.h  TimeZoneSet.h
src/PAMEEPROM/: EEPROMAddresses.h  PAMEEPROM.cpp  PAMEEPROM.h
src/PAMSensor/: PAMSensor.cpp  PAMSensor.h  PAMSensorFeed.cpp
src/PAMSensorManager/: PAMSensorManager.cpp  PAMSensorManager.h
src/PAMSerial/: PAMSerial.cpp  PAMSerial.h  PAMSerialManager.cpp  PAMSerialManager.h  PAMSerialResponder.h
src/PAMSerial/PAMSerialEditEEPROMValue/: PAMSerialEditEEPROMValue.h
src/PAMSerial/PAMSerialEditValue/: PAMSerialEditValue.cpp  PAMSerialEditValue.h
src/PAMSerial/PAMSerialMenu/: PAMSerialMenu.cpp  PAMSerialMenu.h
src/PAMSpecie/: PAMSpecie.cpp  PAMSpecie.h
src/SendingData/: BLEconstants.h  SendingData.cpp  SendingData.h
src/Sensors/108L/: 108L.cpp  108L.h
src/Sensors/BME680/: BME680.cpp  BME680.h
src/Sensors/HIH8120/: HIH8120.cpp  HIH8120.h
src/Sensors/PAMCO/: PAMCO.cpp  PAMCO.h
src/Sensors/PAMNO2/: PAMNO2.cpp  PAMNO2.h
src/Sensors/Plantower/: Plantower.cpp  Plantower.h
src/Sensors/Practice/: practice.cpp  practice.h
src/Sensors/T6713/: T6713.cpp  T6713.h
src/Sensors/TPHFusion/: TPHFusion.cpp  TPHFusion.h  TPHFusion_Serial.cpp
src/TakeMeasurements/: TakeMeasurements.cpp  TakeMeasurements.h
src/protos/: final_pam_upload.proto  pam_upload.proto
src/sps30/src/: sps30.h
